# novobitcoin

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  COPYING  DISCLOSURE_POLICY.md  Dockerfile-doxygen  INSTALL.md  Makefile.am  README.md  autogen.sh  configure.ac
contrib/: README.md  novobitcoind.bash-completion
depends/: README.md
doc/: Doxyfile  README.md  REST-interface.md  benchmarking.md  bips.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  files.md  functional-tests.md  init.md  reduce-traffic.md  release-notes.md  zmq.md
share/: on_prod_tag.sh  setup.nsi.in
src/: CMakeLists.txt  Makefile.am  Makefile.bench.include  Makefile.leveldb.include  Makefile.test.include  abort_node.cpp  abort_node.h  addrdb.cpp  amount.cpp  amount.h  async_file_reader.h  big_int.cpp  big_int.h  block_file_access.cpp  block_file_access.h  block_file_info.cpp  block_file_info.h  block_hasher.h  block_index.cpp  block_index.h  block_index_store.h  block_index_store_loader.cpp  block_index_store_loader.h  blockfileinfostore.cpp  blockfileinfostore.h  blockindex_with_descendants.h  blockstreams.h  blockvalidation.h  bloom.cpp  bloom.h  cfile_util.cpp  cfile_util.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkqueuepool.h  clientversion.cpp  (+109 more)
src/bench/: CMakeLists.txt  bench.cpp  bench.h  bench_novobitcoin.cpp  ccoins_caching.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  cscript.cpp  interpreter.cpp  mempooltxdb.cpp  rollingbloom.cpp  thread_safe_queue.cpp
(+318 files in other folders)
